<resources>
    <string name="app_name">K.H.Binding</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="welcome">歡迎！</string>
    <string name="btn_go">編輯去！</string>
    <string name="btn_maybe_later">先逛逛 App ~~</string>
    <string name="reminder_user_info">記得編輯資訊讓更多人認識你唷!</string>
    <string name="reminder_new_member_bold">現在就去編輯個人資訊</string>
    <string name="reminder_new_member">\" 讓更多人認識您！也讓您擁有更好的體驗！\"</string>
    <string name="calendar">月曆</string>
    <string name="chatroom">訊息</string>
    <string name="profile">Profile</string>
    <string name="search">搜尋文章</string>
    <string name="search_EN">Search</string>
    <string name="select_subject">找尋合適的對象</string>
    <string name="go_result">看結果</string>
    <string name="connect_fails">The connect fails</string>
    <string name="start_a_new_conversation">Start a new conversation</string>
    <string name="indicator_message">輸入訊息</string>
    <string name="gender">性別</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="reminder_finish_user_info">Finishing the info would help when pairing</string>
    <string name="logger_already_added">Has Been Added</string>
    <string name="reminder_invalid_time">Time Interval</string>
    <string name="you_do_not_pass">You Do Not Pass</string>
    <string name="spinner_select_partner">Select Partner</string>
    <string name="no_notification">No Notification</string>
    <string name="btn_accept">ACCEPT</string>
    <string name="reminder_subject_max">You can only select 3 subject</string>
    <string name="btn_decline">DECLINE</string>
    <string name="text_invitation">\ 像您提出一份約定邀請: \</string>
    <string name="btn_going">是否接受邀請?</string>
    <string name="btn_no">禮貌婉拒</string>
    <string name="btn_yes">接受邀請</string>
    <string name="member">Member</string>
    <string name="colon">:</string>
    <string name="detail">Detail</string>
    <string name="identity">身分</string>
    <string name="menu_item_title_edit">EDIT</string>
    <string name="menu_item_title_save">SAVE</string>
    <string name="show_less">Show Less</string>
    <string name="currently_vacant">Currently Vacant</string>

    <!-- Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Wenbin Yeh</string>
    <string name="nav_header_subtitle">leo55576@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Drawer item name-->
    <string name="menu_my_article">我的文章</string>
    <string name="menu_my_collection">收藏文章</string>
    <string name="menu_followers">粉絲</string>
    <string name="menu_following">追蹤中</string>

    <!-- Home Fragment -->
    <string name="pager_title_all">全部</string>
    <string name="pager_study_group">讀書會</string>
    <string name="pager_find_tutor">找老師</string>
    <string name="pager_find_student">找學生</string>
    <string name="pager_skill_exchange">交換技能</string>

    <!-- Edit Profile Fragment -->
    <string name="do_nothing">無權限無法做事!</string>
    <string name="load_img_fail">讀取圖片失敗</string>
    <string name="edit_profile">編輯個人資訊</string>
    <string name="edit_introduction_reminder">目前還沒有您的自我介紹喔，趕快點\"編輯個人資訊\"來編輯您的各資訊吧！</string>
    <string name="recommended_title">為您推薦</string>
    <string name="project_owner_name">葉文彬</string>
    <string name="button">Button</string>
    <string name="textView">textView</string>
    <string name="makeAPinkyPromise">建立約定</string>
    <string name="title">Title</string>
    <string name="keyName">輸入約定的名稱吧！</string>
    <string name="type">Type</string>
    <string name="city">City</string>
    <string name="location">地點</string>
    <string name="datingTime">約定時間</string>
    <string name="all_day">All-day</string>
    <string name="_19_00">19:00</string>
    <string name="_21_00">21:00</string>
    <string name="description">Description</string>
    <string name="context">約定內容</string>
    <string name="attendee">Attendee</string>
    <string name="send_invitation">送出邀請</string>
    <string name="talented">擅長</string>
    <string name="interested">想學</string>
    <string name="introduction">自我介紹</string>
    <string name="save">儲存</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="posts">Posts</string>
    <string name="article_title">文章標題</string>
    <string name="give">提供</string>
    <string name="category">類別</string>
    <string name="post_article">發布文章</string>

    <string-array name="category_array">
        <item>交換技能</item>
        <item>找學生</item>
        <item>找老師</item>
        <item>讀書會</item>
    </string-array>

    <string-array name="category_attendees">
        <item>Sean</item>
        <item>Peter</item>
        <item>Scolley</item>
        <item>Czerny</item>
    </string-array>

    <string-array name="search_type">
        <item>找老師</item>
        <item>找學生</item>
    </string-array>

    <string-array name="city_array">
        <item>臺北市</item>
        <item>新北市</item>
        <item>桃園市</item>
        <item>臺中市</item>
        <item>臺南市</item>
        <item>高雄市</item>
        <item>新竹市</item>
        <item>嘉義市</item>
        <item>基隆市</item>
        <item>新竹縣</item>
        <item>苗栗縣</item>
        <item>彰化縣</item>
        <item>南投縣</item>
        <item>雲林縣</item>
        <item>嘉義縣</item>
        <item>屏東縣</item>
        <item>宜蘭縣</item>
        <item>花蓮縣</item>
        <item>臺東縣</item>
        <item>澎湖縣</item>
        <item>金門縣</item>
        <item>連江縣</item>
    </string-array>

    <string-array name="gender">
        <item>male</item>
        <item>female</item>
        <item>unlimited</item>
    </string-array>

    <string-array name="default_array">
    </string-array>

    <string-array name="major_category_array">
        <item>高中</item>
        <item>國中</item>
        <item>語文</item>
        <item>程式語言</item>
        <item>音樂</item>
        <item>藝術</item>
        <item>運動</item>
        <item>檢定考試</item>
    </string-array>

    <string-array name="high_school_array">
        <item>高中國文</item>
        <item>高中英文</item>
        <item>高中數學</item>
        <item>高中物理</item>
        <item>高中化學</item>
        <item>高中生物</item>
        <item>高中歷史</item>
        <item>高中地理</item>
        <item>高中公民</item>
        <item>高中地科</item>
    </string-array>

    <string-array name="secondary_array">
        <item>國中國文</item>
        <item>國中英文</item>
        <item>國中數學</item>
        <item>國中理化</item>
        <item>國中生物</item>
        <item>國中歷史</item>
        <item>國中地理</item>
        <item>國中公民</item>
        <item>國中地科</item>
    </string-array>

    <string-array name="language_array">
        <item>English</item>
        <item>French</item>
        <item>Japanese</item>
        <item>Korean</item>
        <item>German</item>
        <item>Spanish</item>
    </string-array>

    <string-array name="programming_array">
        <item>前端</item>
        <item>後端</item>
        <item>iOS</item>
        <item>Android</item>
        <item>Data</item>
        <item>C++</item>
        <item>Java</item>
        <item>JavaScript</item>
        <item>Python</item>
        <item>Leetcode</item>
        <item>Html css</item>
        <item>Wordpress</item>
    </string-array>

    <string-array name="music_array">
        <item>鋼琴</item>
        <item>小提琴</item>
        <item>吉他</item>
        <item>烏克麗麗</item>
        <item>口琴</item>
    </string-array>

    <string-array name="art_array">
        <item>素描</item>
        <item>UI/UX</item>
        <item>修圖</item>
        <item>影片剪輯</item>
    </string-array>

    <string-array name="sport_array">
        <item>跑步</item>
        <item>羽毛球</item>
        <item>桌球</item>
        <item>藍球</item>
        <item>瑜珈</item>
        <item>健力</item>
        <item>健美</item>
        <item>健體</item>
        <item>游泳</item>
        <item>潛水</item>
        <item>CrossFit</item>
    </string-array>

    <string-array name="exam_array">
        <item>TOIEC</item>
        <item>TOFEL</item>
        <item>IELTS</item>
        <item>JLPT</item>
    </string-array>

    <string-array name="all_tag_array">
        <item>高中國文</item>
        <item>高中英文</item>
        <item>高中數學</item>
        <item>高中物理</item>
        <item>高中化學</item>
        <item>高中生物</item>
        <item>高中歷史</item>
        <item>高中地理</item>
        <item>高中公民</item>
        <item>高中地科</item>
        <item>國中國文</item>
        <item>國中英文</item>
        <item>國中數學</item>
        <item>國中理化</item>
        <item>國中生物</item>
        <item>國中歷史</item>
        <item>國中地理</item>
        <item>國中公民</item>
        <item>國中地科</item>
        <item>English</item>
        <item>French</item>
        <item>Japanese</item>
        <item>Korean</item>
        <item>German</item>
        <item>Spanish</item>
        <item>前端</item>
        <item>後端</item>
        <item>iOS</item>
        <item>Android</item>
        <item>Data</item>
        <item>C++</item>
        <item>Java</item>
        <item>JavaScript</item>
        <item>Python</item>
        <item>Leetcode</item>
        <item>Html css</item>
        <item>Wordpress</item>

        <item>鋼琴</item>
        <item>小提琴</item>
        <item>吉他</item>
        <item>烏克麗麗</item>
        <item>口琴</item>

        <item>素描</item>
        <item>UI/UX</item>
        <item>修圖</item>
        <item>影片剪輯</item>

        <item>跑步</item>
        <item>羽毛球</item>
        <item>桌球</item>
        <item>藍球</item>
        <item>瑜珈</item>
        <item>健力</item>
        <item>健美</item>
        <item>健體</item>
        <item>游泳</item>
        <item>潛水</item>
        <item>CrossFit</item>

        <item>TOIEC</item>
        <item>TOFEL</item>
        <item>IELTS</item>
        <item>JLPT</item>
    </string-array>

</resources>