<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/articleFragment"
            android:visible="false"
            android:title="Head" />

        <item
            android:id="@+id/myArticleFragment"
            android:icon="@drawable/outline_history_edu_black_48"
            android:title="@string/menu_my_article" />
        <item
            android:id="@+id/myCollectFragment"
            android:icon="@drawable/outline_collections_bookmark_black_48"
            android:title="@string/menu_my_collection" />
        <item
            android:id="@+id/followedByFragment"
            android:icon="@drawable/outline_favorite_black_48"
            android:title="@string/menu_followers" />

        <item
            android:id="@+id/followingFragment"
            android:icon="@drawable/outline_loyalty_black_48"
            android:title="@string/menu_following" />

        <item
            android:id="@+id/searchFragment"
            android:icon="@drawable/outline_loyalty_black_48"
            android:visible="false"
            android:title="搜尋" />
    </group>
</menu>