<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>

        <variable
            name="event"
            type="com.wenbin.knowhowbinding.data.Event" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_event"
            android:layout_width="match_parent"
            android:layout_height="108dp"
            app:cardCornerRadius="8dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_layout_category_background"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:background='@{event.tag.equals("交換技能") ? @drawable/bg_event_card_category_change_skill : event.tag.equals("找學生") ? @drawable/bg_event_card_category_find_student : event.tag.equals("找老師") ? @drawable/bg_event_card_category_find_teacher : @drawable/bg_event_card_category_read_group}'>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <TextView
                        android:id="@+id/textView_title_week"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        week="@{event.eventTime}"
                        tools:text="WED"
                        android:textColor="@color/white"

                        />

                    <TextView
                        android:id="@+id/textView_title_month"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="@id/textView_title_week"
                        app:layout_constraintTop_toBottomOf="@id/textView_title_week"
                        month="@{event.eventTime}"
                        tools:text="JUNE"
                        android:textColor="@color/white"

                        />

                    <TextView
                        android:id="@+id/textView_title_day"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toEndOf="@id/textView_title_week"
                        app:layout_constraintTop_toBottomOf="@id/textView_title_week"
                        day="@{event.eventTime}"
                        android:textColor="@color/white"

                        tools:text="26"
                        />

                    <TextView
                        android:id="@+id/textView_title_category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/textView_title_month"
                        app:layout_constraintStart_toStartOf="@id/textView_title_week"
                        android:text="@{event.tag}"
                        android:textColor="@color/white"
                        tools:text="交換技能"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView_event_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="96dp"
                    android:layout_marginTop="12dp"
                    android:hint="event.title"
                    android:text="@{event.title}"
                    android:textColor="@color/dark_01"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView_event_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:hint="event.city"
                    android:text="@{event.city}"
                    android:textColor="@color/lightGrey_02"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@id/textView_event_title"
                    app:layout_constraintTop_toBottomOf="@id/textView_event_title" />

                <TextView
                    android:id="@+id/textView_member"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="Wenbin, Scolley"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@id/textView_event_title"
                    app:layout_constraintTop_toBottomOf="@id/textView_event_city" />


                <TextView
                    android:id="@+id/textView_start_time"
                    time="@{event.startTime}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:visibility="@{event.startTime == -1L ? View.GONE : View.VISIBLE}"
                    app:layout_constraintStart_toStartOf="@id/textView_event_city"
                    app:layout_constraintTop_toBottomOf="@id/textView_event_city" />

                <TextView
                    android:id="@+id/textView_dash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:visibility="@{event.startTime == -1L ? View.GONE : View.VISIBLE}"
                    app:layout_constraintStart_toEndOf="@id/textView_start_time"
                    app:layout_constraintTop_toTopOf="@id/textView_start_time" />

                <TextView
                    android:id="@+id/textView_end_time"
                    time="@{event.endTime}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/reminder_invalid_time"
                    android:visibility="@{event.startTime == -1L ? View.GONE : View.VISIBLE}"
                    app:layout_constraintStart_toEndOf="@id/textView_dash"
                    app:layout_constraintTop_toTopOf="@id/textView_start_time" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image_user_avatar"
                    android:layout_width="@dimen/attendees_image_size"
                    android:layout_height="@dimen/attendees_image_size"
                    android:layout_marginTop="@dimen/attendees_image_margin_top"
                    android:layout_marginBottom="2dp"
                    android:src="@drawable/t01kgus2cd7_u01nm9bv938_b26c5256f267_512"
                    android:visibility="visible"
                    app:civ_border_color="@color/light_yellow"
                    app:civ_border_width="4dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textView_event_title"
                    app:layout_constraintTop_toBottomOf="@+id/textView_end_time" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_schedule_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="88dp"
            android:background="@drawable/bg_botton_corner"
            android:paddingBottom="16dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/cardView_event"
            app:layout_constraintStart_toStartOf="@id/cardView_event"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_attendee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/title_attendee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/member"
                    android:textColor="@color/black_36_alpha"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/divider_attendee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="79dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/colon"
                    android:textColor="@color/black_36_alpha"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/title_attendee" />

                <TextView
                    android:id="@+id/text_attendee_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/black_36_alpha"
                    app:layout_constraintStart_toEndOf="@id/divider_attendee"
                    app:layout_constraintTop_toTopOf="@id/title_attendee"
                    tools:text="Taylor Swift" />

                <TextView
                    android:id="@+id/text_attendee_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/black_36_alpha"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/text_attendee_1"
                    app:layout_constraintTop_toTopOf="@id/title_attendee"
                    tools:text="Taylor Swift" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_attendee">

                <TextView
                    android:id="@+id/title_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/detail"
                    android:textColor="@color/black_36_alpha"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/divider_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="79dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/colon"
                    android:textColor="@color/black_36_alpha"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/title_detail" />

                <TextView
                    android:id="@+id/text_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/roboto"
                    android:text="@{event.description}"
                    android:textColor="@color/black_36_alpha"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/divider_detail"
                    app:layout_constraintTop_toTopOf="@id/title_detail"
                    tools:text="Taylor Swift" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>